crates/python_parser/tests/snapshots/invalid_syntax@lambda_body_with_yield_expr.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/lambda_body_with_yield_expr.py
---
## AST

```
Module(
    ModModule {
        range: 0..41,
        body: [
            Expr(
                ExprStmt {
                    range: 0..17,
                    value: Lambda(
                        LambdaExpr {
                            range: 0..17,
                            parameters: Some(
                                Parameters {
                                    range: 7..8,
                                    posonlyargs: [],
                                    args: [
                                        ParameterWithDefault {
                                            range: 7..8,
                                            parameter: Parameter {
                                                range: 7..8,
                                                name: Identifier {
                                                    id: Name("x"),
                                                    range: 7..8,
                                                },
                                                annotation: None,
                                            },
                                            default: None,
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kwarg: None,
                                },
                            ),
                            body: Yield(
                                YieldExpr {
                                    range: 10..17,
                                    value: Some(
                                        Name(
                                            NameExpr {
                                                range: 16..17,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 18..40,
                    value: Lambda(
                        LambdaExpr {
                            range: 18..40,
                            parameters: Some(
                                Parameters {
                                    range: 25..26,
                                    posonlyargs: [],
                                    args: [
                                        ParameterWithDefault {
                                            range: 25..26,
                                            parameter: Parameter {
                                                range: 25..26,
                                                name: Identifier {
                                                    id: Name("x"),
                                                    range: 25..26,
                                                },
                                                annotation: None,
                                            },
                                            default: None,
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kwarg: None,
                                },
                            ),
                            body: YieldFrom(
                                YieldFromExpr {
                                    range: 28..40,
                                    value: Name(
                                        NameExpr {
                                            range: 39..40,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | lambda x: yield y
  |           ^^^^^^^ Syntax Error: Yield expression cannot be used here
2 | lambda x: yield from y
  |


  |
1 | lambda x: yield y
2 | lambda x: yield from y
  |           ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
  |
