crates/python_parser/tests/snapshots/invalid_syntax@match_stmt_invalid_guard_expr.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/match_stmt_invalid_guard_expr.py
---
## AST

```
Module(
    ModModule {
        range: 0..100,
        body: [
            Match(
                MatchStmt {
                    range: 0..30,
                    subject: Name(
                        NameExpr {
                            range: 6..7,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 13..30,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 18..19,
                                    pattern: None,
                                    name: Some(
                                        Identifier {
                                            id: Name("y"),
                                            range: 18..19,
                                        },
                                    ),
                                },
                            ),
                            guard: Some(
                                Starred(
                                    StarredExpr {
                                        range: 23..25,
                                        value: Name(
                                            NameExpr {
                                                range: 24..25,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ),
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 27..30,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 27..30,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
            Match(
                MatchStmt {
                    range: 31..63,
                    subject: Name(
                        NameExpr {
                            range: 37..38,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 44..63,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 49..50,
                                    pattern: None,
                                    name: Some(
                                        Identifier {
                                            id: Name("y"),
                                            range: 49..50,
                                        },
                                    ),
                                },
                            ),
                            guard: Some(
                                Starred(
                                    StarredExpr {
                                        range: 55..57,
                                        value: Name(
                                            NameExpr {
                                                range: 56..57,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ),
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 60..63,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 60..63,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
            Match(
                MatchStmt {
                    range: 64..99,
                    subject: Name(
                        NameExpr {
                            range: 70..71,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 77..99,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 82..83,
                                    pattern: None,
                                    name: Some(
                                        Identifier {
                                            id: Name("y"),
                                            range: 82..83,
                                        },
                                    ),
                                },
                            ),
                            guard: Some(
                                Yield(
                                    YieldExpr {
                                        range: 87..94,
                                        value: Some(
                                            Name(
                                                NameExpr {
                                                    range: 93..94,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 96..99,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 96..99,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match x:
2 |     case y if *a: ...
  |               ^^ Syntax Error: Starred expression cannot be used here
3 | match x:
4 |     case y if (*a): ...
  |


  |
2 |     case y if *a: ...
3 | match x:
4 |     case y if (*a): ...
  |                ^^ Syntax Error: Starred expression cannot be used here
5 | match x:
6 |     case y if yield x: ...
  |


  |
4 |     case y if (*a): ...
5 | match x:
6 |     case y if yield x: ...
  |               ^^^^^^^ Syntax Error: Yield expression cannot be used here
  |
