crates/python_parser/tests/snapshots/invalid_syntax@match_stmt_no_newline_before_case.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/match_stmt_no_newline_before_case.py
---
## AST

```
Module(
    ModModule {
        range: 0..23,
        body: [
            Match(
                MatchStmt {
                    range: 0..22,
                    subject: Name(
                        NameExpr {
                            range: 6..9,
                            id: Name("foo"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 11..22,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 16..17,
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 19..22,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 19..22,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match foo: case _: ...
  |            ^^^^ Syntax Error: Expected newline, found 'case'
  |


  |
1 | match foo: case _: ...
  |
